updated OpenLayers to v4.2.0

--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -41,14 +41,14 @@
     <!-- Base64 Encoding -->
     <script src="lib/base64.js"></script>
     <!-- openlayers 3 -->
-    <link rel="stylesheet" href="lib/ol3/ol.css">
-    <script src="lib/ol3/ol-debug.js"></script>
+    <link rel="stylesheet" href="lib/ol/ol.css">
+    <script src="lib/ol/ol-debug.js"></script>
     <!-- openlayers 3 popup (https://github.com/walkermatt/ol3-popup) -->
-    <link rel="stylesheet" href="lib/ol3/ol3-popup.css">
-    <script src="lib/ol3/ol3-popup.js"></script>
+    <link rel="stylesheet" href="lib/ol/ol3-popup.css">
+    <script src="lib/ol/ol3-popup.js"></script>
     <!-- openlayers 3 layerswitcher -->
-    <link rel="stylesheet" href="lib/ol3/ol3-layerswitcher.css">
-    <script src="lib/ol3/ol3-layerswitcher.js"></script>
+    <link rel="stylesheet" href="lib/ol/ol3-layerswitcher.css">
+    <script src="lib/ol/ol3-layerswitcher.js"></script>
     <!-- local storage with localForage and SQLite Driver -->
     <script src="lib/localforage/dist/localforage.js"></script>
     <script src="lib/localforage-cordovasqlitedriver/src/localforage-cordovasqlitedriver.js"></script>
