fixed typo in method name for field info modal

--- a/www/app/spot/other-features/other-feature-modal.html
+++ b/www/app/spot/other-features/other-feature-modal.html
@@ -26,7 +26,7 @@
         <ion-label>
           Other Feature Type
           <button class='button button-small button-icon ion-information-circled strabo-field-info-button'
-                  ng-click='form.showFieldInfoModal({"label": "Other Feature Type", "hint": "Type of feature ..."})'></button>
+                  ng-click='form.showFieldInfo({"label": "Other Feature Type", "hint": "Type of feature ..."})'></button>
         </ion-label>
         <input type='text' placeholder='Type of feature ...' ng-model='vmChild.newFeatureType'>
       </ion-input>
