--- a/www/app/spots/spots.directive.html
+++ b/www/app/spots/spots.directive.html
@@ -1,5 +1,5 @@
 <div>
-  <div class='padding-left filter-on' ng-show='vm.filterOn'>
+  <div class='padding-left filter-on' ng-show='vm.isFilterOn'>
     Results are being filtered.
   </div>
   <div class='padding' ng-show='vm.spots.length === 0'>
