--- a/www/app/shared/select-item-modal.html
+++ b/www/app/shared/select-item-modal.html
@@ -4,7 +4,7 @@
       <span class='icon ion-arrow-left-c'></span>
     </button>
     <h1 class='title'>Select Items</h1>
-    <button class='button button-icon ion-funnel button-positive' ng-click='vm.filter()'></button>
+    <button class='button button-icon ion-funnel' ng-click='vm.filter()'></button>
   </ion-header-bar>
   <ion-content class='has-header'>
     <div class='button-bar'>
@@ -15,10 +15,10 @@
       <a class='button' ng-click='vm.toggleItem("tags")'
          ng-class='{"button-positive": vm.isShowItem("tags"), "button-stable": !vm.isShowItem("tags")}'>Tags</a>
     </div>
-    <div class='padding-left filter-on' ng-show='vm.filterOn'>
-      Results are being filtered.
-    </div>
     <div ng-show='vm.isShowItem("spots")'>
+      <div class='padding-left filter-on' ng-show='vm.isFilterOn'>
+        Results are being filtered.
+      </div>
       <div class='padding' ng-show='vm.spotsDisplayed.length === 0'>
         No Spots in your active datasets.
       </div>
