--- a/www/app/shared/select-item-modal.html
+++ b/www/app/shared/select-item-modal.html
@@ -4,7 +4,7 @@
       <span class='icon ion-arrow-left-c'></span>
     </button>
     <h1 class='title'>Select Items</h1>
-    <button class='button button-icon ion-funnel' ng-click='vm.filter()'></button>
+    <button class='button button-icon ion-levels rotate-90' ng-click='vm.addFilters()'></button>
   </ion-header-bar>
   <ion-content class='has-header'>
     <div class='button-bar'>
