--- a/www/app/spots/spots.web.html
+++ b/www/app/spots/spots.web.html
@@ -8,9 +8,9 @@
       </div>
     </div>
     <div class="subheader-right">
-      <button class='button button-icon ion-funnel' ng-click='vm.filter()'></button>
-      <button class='button button-icon ion-plus' ng-click='vm.newSpot()'></button>
-      <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
+      <button class='button button-icon icon ion-levels rotate-90' ng-click='vm.addFilters()'></button>
+      <button class='button button-icon icon ion-plus' ng-click='vm.newSpot()'></button>
+      <button class='button button-icon icon ion-more rotate-90' ng-click='vm.popover.show($event)'></button>
     </div>
   </div>
   <div>
