--- a/www/app/spots/spots.directive.html
+++ b/www/app/spots/spots.directive.html
@@ -2,10 +2,13 @@
   <div class='padding-left filter-on' ng-show='vm.isFilterOn'>
     Results are being filtered.
   </div>
-  <div class='padding' ng-show='vm.spots.length === 0'>
+  <div class='padding' ng-show='!vm.isFilterOn && vm.spots.length === 0'>
     No Spots added to any of the active datasets yet. Add a spot using the '+' button in the top right or by drawing a
     point, line or polygon on the
     Main Map page.
+  </div>
+  <div class='padding' ng-show='vm.isFilterOn && vm.spots.length === 0'>
+    No results. Try modifying or removing your filter.
   </div>
   <ion-list>
     <ion-item class='item-text-wrap item-button-right'
