--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
     <!-----------------------------------------------------------------
     MOBILE APP ONLY
     ------------------------------------------------------------------->
-    <script src="lib/ng-cordova.js"></script>
+    <script src="lib/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>          <!--(this will be a 404 during development)-->
 
     <!-----------------------------------------------------------------
