--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -57,7 +57,7 @@
     NOT USED FOR WEB BUT NEEDED TO HIDE MISSING ERRORS
     ------------------------------------------------------------------->
     <!-- ngCordova -->
-    <script src="lib/ng-cordova.js"></script>
+    <script src="lib/ng-cordova.min.js"></script>
 
     <!-----------------------------------------------------------------
     STRABO FILES
