Added offline login option

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,8 @@
     <!-- local storage with localForage and SQLite Driver -->
     <script src="lib/localforage/dist/localforage.js"></script>
     <script src="lib/localforage-cordovasqlitedriver/src/localforage-cordovasqlitedriver.js"></script>
+    <!-- pbkdf2 lib from CryptoJS for hasing local password storage -->
+    <script src="lib/crypto-js/pbkdf2.js"></script>
 
     <!-----------------------------------------------------------------
     MOBILE APP ONLY
