--- a/www/app/maps/offline-maps/offline-map.html
+++ b/www/app/maps/offline-maps/offline-map.html
@@ -13,15 +13,24 @@
     <div ng-hide='vm.maps.length === 0'>
       <ion-list>
         <ion-item class='item-text-wrap item-button-right'
-                  ng-repeat='map in vm.maps | orderBy: "name"'
-                  ng-click='vm.edit(map)'>
-          <b>{{ map.name }}</b> <small>(Source: {{ map.title }})</small><br>
-          <small>{{ map.tileArray.length }} tiles,
-            {{ map.size | normalizeBytes }}<span ng-if='map.date'>, Saved: {{ map.date }}</span></small>
+                  ng-repeat='map in vm.maps | orderBy: "name"'>
+          <div ng-click='vm.edit(map)'>
+            <b>{{ map.name }}</b>
+            <small>(Source: {{ map.title }})</small>
+            <br>
+            <small>{{ map.tileArray.length }} tiles,
+              {{ map.size | normalizeBytes }}<span ng-if='map.date'>, Saved: {{ map.date }}</span></small>
+          </div>
+          <div class='buttons'>
+            <button class='button button-icon'
+                    ng-click='vm.goToMap(map)'>
+              <i class='icon ion-map'></i>
+            </button>
             <button class='button button-clear button-assertive'
                     ng-click='vm.deleteTiles(map)'>
               <i class='icon ion-minus-circled'></i>
             </button>
+          </div>
         </ion-item>
       </ion-list>
       <div class='padding' ng-show='vm.maps.length >= 1'>
@@ -32,9 +41,9 @@
           not used in any other maps.
         </small> -->
         <small>Note some tiles may be used in more than one saved map so the total number of saved tiles
-        is not necessarily simply a sum the number of tiles above. Deleting a saved map will only delete those tiles
-        not used in any other map.
-      </small>
+          is not necessarily simply a sum the number of tiles above. Deleting a saved map will only delete those tiles
+          not used in any other map.
+        </small>
       </div>
     </div>
   </ion-content>
