Put Tag in parentheses when Geologic Unit

--- a/www/app/spot/spot-tab/add-geologic-unit-tag-modal.html
+++ b/www/app/spot/spot-tab/add-geologic-unit-tag-modal.html
@@ -3,7 +3,7 @@
     <button class='button button-clear' ng-click='vmChild.closeGeologicUnitTagModal()'>
       <span class='icon ion-arrow-left-c'></span>
     </button>
-    <h1 class='title'>Add/Remove Geologic Unit Tag</h1>
+    <h1 class='title'>Add/Remove Geologic Unit (Tag)</h1>
     <button class='button button-icon' ng-click='vmChild.createGeologicUnitTag()'>
       <span class='icon ion-plus'></span>
     </button>
