--- a/www/app/spot/spot-tab/spot-tab.directive.html
+++ b/www/app/spot/spot-tab/spot-tab.directive.html
@@ -133,7 +133,7 @@
     </div>
     <button ng-click='vmChild.addGeologicUnitTag();' class='button button-clear button-positive'>
       <i class='icon ion-plus-circled'></i>
-      <span class='button-text-big'>Add/Remove a Geologic Unit</span>
+      <span class='button-text-big'>Add/Remove a Geologic Unit (Tag)</span>
     </button>
     <div class='strabo-form'>
       <ion-list>
