--- a/www/app/spot/basic-form-modal.html
+++ b/www/app/spot/basic-form-modal.html
@@ -4,9 +4,15 @@
             ng-click='vmChild.submit()'>
     </button>
     <h1 class='title'>{{ vmChild.modalTitle }}</h1>
-    <button class='button button-clear icon ion-compass'
-            ng-click='vmChild.openCompass()'
-            ng-show='vm.stateName === "app.spotTab.orientations"'></button>
+    <div class='buttons'>
+      <button class='button button-clear icon ion-calculator icon-right'
+              ng-click='vmChild.calcTrendPlunge()'
+              ng-show='vm.stateName === "app.spotTab.orientations" && vm.data.type === "linear_orientation" && vmChild.parentOrientation'>
+        <span class="calc-trend-plunge-text">Calc Trend Plunge</span></button>
+      <button class='button button-clear icon ion-compass'
+              ng-click='vmChild.openCompass()'
+              ng-show='vm.stateName === "app.spotTab.orientations"'></button>
+    </div>
   </ion-header-bar>
   <ion-content class='has-header'>
     <div class='padding orientation-reference' ng-show="vmChild.parentOrientation">
