Hide stereonet options on desktop for now

--- a/www/app/spot/nesting/nesting-tab.directive.html
+++ b/www/app/spot/nesting/nesting-tab.directive.html
@@ -79,7 +79,7 @@
         </span>
     </div>
 
-    <button ng-click='vmChild.stereonetSpots(vmChild.childrenSpots)'
+    <button ng-show='vmChild.isiOS()' ng-click='vmChild.stereonetSpots(vmChild.childrenSpots)'
             class='button button-clear button-positive'>
       <i class='icon ion-disc'></i>
       <span class='button-text-big'>Add Nested Spots to Stereonet</span>
