fixed view history stack

--- a/www/app/maps/map/map-popover.html
+++ b/www/app/maps/map/map-popover.html
@@ -14,7 +14,7 @@
         <i class="icon ion-disc"></i> Lasso Spots for Stereonet
       </ion-item>
       <ion-item ng-show='vm.isNesting' ng-click='vm.toggleNesting()'>
-        <i class="icon ion-disc"></i> End Continous Nesting
+        <i class="icon ion-disc"></i> End Continuous Nesting
       </ion-item>
       <ion-item ng-show='!vm.isNesting' ng-click='vm.toggleNesting()'>
         <i class="icon ion-disc"></i> Begin Continuous Nesting
