--- a/www/app/maps/map/map.html
+++ b/www/app/maps/map/map.html
@@ -1,8 +1,8 @@
 <ion-view title=''>
   <ion-nav-buttons side='left'>
-    <button ng-hide='vm.currentSpot' menu-toggle='left'
+    <button ng-hide='vm.hasBackView()' menu-toggle='left'
             class='button button-icon icon ion-navicon'></button>
-    <button ng-show='vm.currentSpot' ng-click='vm.returnToSpot();'
+    <button ng-show='vm.hasBackView()' ng-click='vm.goBack()'
             class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
