hide export to csv button until csv converter working properly

--- a/www/app/spots/spots-popover.html
+++ b/www/app/spots/spots-popover.html
@@ -4,9 +4,9 @@
       <ion-item ng-click='vm.setListDetail()'>
         <i class="icon ion-document-text"></i> Set List Detail
       </ion-item>
-      <ion-item ng-click='vm.exportToCSV()'>
+      <!--<ion-item ng-click='vm.exportToCSV()'>
         <i class="icon ion-archive"></i> Export All Spots to CSV
-      </ion-item>
+      </ion-item>-->
     </ion-list>
   </ion-content>
 </ion-popover-view>
